# normie

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile.api  Dockerfile.classifier  LICENSE  README.md  __init__.py  dados.ipynb  docker-compose.yml  main.py  notebook.ipynb  pyproject.toml  run.py  run_classifier.py  testes.ipynb
app/: __init__.py
app/processor/: __init__.py  classifier.py  normaliser.py
app/redis/: __init__.py  client.py
app/routes/: __init__.py
app/utils/: __init__.py  config.py  logging_config.py  models.py
tests/: README.md  dados_teste.py  dequeue.js  end_to_end_test.js  enqueue.js  k6_test.js  load_test.js  smoke_test.js  stress_test.js  test.js  test_client.py  test_phrases.json
