[project]
name = "normie"
version = "0.1.0"
description = "Classificador textual de UGC's"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "enelvo>=0.15",
    "fastapi>=0.118.3",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "redis>=6.4.0",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "uvicorn>=0.37.0",
]
